@@ -91,6 +91,7 @@ icons=AdjustWidth.png \
 	ArrowR.png \
 	ArrowU.png \
 	BrokenImage.png \
+	ButtonProperties.png \
 	Copy.png \
 	CopyToBuffer.png \
 	CurrentDir.png \
